GET /gammaTable/{time}/{kairosProgram}/{sourceID}/{destinationID} implemented and tested
